[SG-1764] - Style fixes for resource accordion details on mobile and their labels on tablet

--- a/web/themes/custom/sfgovpl/src/sass/components/_details.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_details.scss
@@ -81,9 +81,11 @@ details {
       @include media-max($mobile-screen) {
         >.sfgov-container-item {
           margin-bottom: 0;
+          font-size: 20px;
+          font-weight: 600;
+          line-height: 27px;
         }
       }
-
     }
     .sfgov-resource-card,
     .sfgov-service-card {
